drop in pyramid added

--- a/index.css
+++ b/index.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
+
 body {
     font-family: 'Kumbh Sans', sans-serif;
-    background-image: ; 
+    
     background-size: cover;
 }
 
 h1 {
-    color:red;
+    color: black;
     font-size: 60px;
     font-weight: 700;
+    text-align: center;
+    padding: 10px auto;
 }
 
 h2 {
@@ -26,4 +29,93 @@ p {
 
 img {
     width: 300px;
+    height: 200px;
+    border-radius: 10px 60%;
 }
+
+img:hover {
+    opacity: 50%;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    position: relative;
+
+}
+
+header:hover {
+    opacity: 50%;
+}
+
+#title {
+    position: absolute;
+    /* top: 120px;
+    left: 550px; */
+    margin: 135px 0 0 0;
+}
+
+#sign-in {
+   position: absolute;
+   right: 15px;
+   top: 10px;
+   font-size: 20px;
+}
+
+#activity-section {
+    font-size: 25px;
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.activity-card {
+    padding: 50px;
+    text-align: center;
+    align-content: center;
+}
+
+
+
+footer {
+    background-color: black;
+    color: white;
+    padding: 15px;
+    display: flex;
+    justify-content: space-around;  
+}
+
+.gear-bullet {
+    display: list-item;
+    list-style-type: disc;
+    list-style-position: inside;
+}
+
+/* triangle css */
+.triangle {
+    position: relative;
+    height: 300px;
+    clip-path: polygon(55% 0, 5% 100%, 80% 100%);
+    width: 100%;
+}
+
+.triangle div {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    margin: 0 auto 10px;
+}
+.middle {
+    background:green;
+}
+.top {
+    background: blue;
+    z-index: 1;
+}
+.bottom {
+    background: rgb(131, 33, 33);
+}
+
