--- a/activity.css
+++ b/activity.css
@@ -1,1 +1,10 @@
-@import 'index.css'
+@import 'index.css';
+
+#activity-header {
+    width: 100%;
+    height: 40rem;
+    border-radius: 10px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
