--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
     background-size: cover;
 }
 
+
 h1 {
     color: white;
     font-size: 60px;
@@ -42,19 +43,25 @@ img:hover {
     border-radius: 8px;
 }
 
+.activity-header:hover {
+   color:  rgb(9, 60, 9);
+}
+.activity-header:visited {
+   color:  rgb(9, 60, 9);
+}
+.activity-header:link {
+    color:  rgb(9, 60, 9);
+
+}
+
 header {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
     position: relative;
-    /* background-image: url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/06653b48-43c3-403f-9d72-c1c5519db560/dd3pza8-930e0f24-e194-495d-90a6-bf6e66fdbe79.jpg/v1/fill/w_1194,h_669,q_70,strp/stone_wall_by_pajunen_dd3pza8-pre.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD0xMDc2IiwicGF0aCI6IlwvZlwvMDY2NTNiNDgtNDNjMy00MDNmLTlkNzItYzFjNTUxOWRiNTYwXC9kZDNwemE4LTkzMGUwZjI0LWUxOTQtNDk1ZC05MGE2LWJmNmU2NmZkYmU3OS5qcGciLCJ3aWR0aCI6Ijw9MTkyMCJ9XV0sImF1ZCI6WyJ1cm46c2VydmljZTppbWFnZS5vcGVyYXRpb25zIl19.TZhslY79iAeVhmkle4q6BTkwU2Vk3nGd3cKcgAtXOGc'); */
     background-color: rgb(9, 60, 9);
     padding: 25px 0 25px 0;
     width: 100%;
-}
-
-.activity-header:hover {
-   color: gold;
 }
 
 #title {
@@ -70,9 +77,6 @@ header {
    color: white;
    border-radius: 8px;
    background-color: black;
-   border-style: ridge;
-   border-width: 6px;
-   border-color: grey;
 }
 
 #sign-in:hover{
@@ -83,14 +87,20 @@ header {
     font-size: 25px;
     display: flex;
     flex-flow: row wrap;
-    width: 100%;
     justify-content: space-around;
 }
 
 .activity-card {
     padding: 50px;
     text-align: center;
-    align-content: center;
+    justify-content: center;
+    width: 20%;
+    background-repeat: no-repeat;
+    margin: 2rem;
+    border-radius: 10px 100%;
+}
+.activity-card:hover {
+    border-radius: 8px;
 }
 
 footer {
@@ -99,7 +109,6 @@ footer {
     padding: 15px;
     display: flex;
     justify-content: space-around;
-   
 }
 
 .gear-bullet {
@@ -128,4 +137,15 @@ footer {
     z-index: 1;
 }
 
+/* .title-svg path {
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 0;
+    position: relative;
+}
+
+.title-svg { 
+    position: relative;
+    width: 100%;
+    text-align: center; 
+}  */
 
