--- a/index.css
+++ b/index.css
@@ -16,8 +16,6 @@ h1 {
     font-weight: 700;
     text-align: center;
     padding: 10px auto;
-    font-style: italic;
-    -webkit-text-stroke: 1px black;
 }   
 
 h2 {
@@ -50,7 +48,7 @@ img:hover {
    color:  rgb(9, 60, 9);
 }
 .activity-header:link {
-    color:  rgb(9, 60, 9);
+    color:  white;
 }
 
 header {
@@ -72,14 +70,17 @@ header {
    position: absolute;
    right: 15px;
    top: 10px;
-   font-size: 28px;
+   font-size: 14px;
+   font-weight: 300;
    color: white;
    border-radius: 8px;
-   background-color: black;
+   background-color: rgba(255, 255, 255, 0.2);
+   padding: 1rem
 }
 
 #sign-in:hover{
     color: gold;
+    transform: scale(1.25)
 }
 
 #activity-section {
@@ -90,13 +91,14 @@ header {
 }
 
 .activity-card {
-    padding: 50px;
+    padding: 5rem;
     text-align: center;
     justify-content: center;
-    width: 20%;
+    width: 30%;
     background-repeat: no-repeat;
-    margin: 6rem 2rem;
-    border-radius: 10px 100%;
+    margin: 1rem;
+    margin-top: 3rem;
+    border-radius: 10px 85%;
     background-size: cover;
 }
 .activity-card:hover {
@@ -105,11 +107,12 @@ header {
 }
 
 footer {
-    background-color: rgb(9, 60, 9);
-    color: white;
+    border-top: solid 5px rgb(9, 60, 9);
+    color: grey;
     padding: 15px;
     display: flex;
     justify-content: space-around;
+    margin: 1rem
 }
 
 .gear-bullet {
