--- a/activity.css
+++ b/activity.css
@@ -1,10 +1,33 @@
 @import 'index.css';
 
 #activity-header {
-    width: 100%;
-    height: 40rem;
-    border-radius: 10px;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding: 5rem;
+    position: relative
 }
+
+#activity-header h1 {
+    color: rgba(255, 0, 0, 0.0);;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: white;
+    font-size: 150px;
+    margin: 0.5rem
+}
+
+#activity-header p {
+    color: white;
+    width: 60%;
+    font-size: 18px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    line-height: 1.3;
+    padding: 1rem
+}
+
