--- a/index.css
+++ b/index.css
@@ -1,155 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
-@import 'meyer-reset.css';
-
-* {
-    box-sizing: border-box;
-}
+@import 'home.css';
 
 body {
-    font-family: 'Kumbh Sans', sans-serif;
-    background-size: cover;
+    background-image: url("https://www.expocafeperu.com/w/2020/04/essential-backpacking-gear-hiking-list-granite-crown-rain-swiss-carry-on-luggage-camping-trailer-top-ratings-womens-bike-for-women-ultralight-extreme-labs-baby.jpg");
+    width: 100%;
+    height: 100 vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100vh;
+    color: white
 }
 
-
-h1 {
-    color: rgba(255, 255, 255, 0.3);;
-    -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: white;
-    font-size: 100px;
-    letter-spacing: 10px;
-    font-weight: 700;
-    text-align: center;
-    padding-top: 10px; 
-}   
+main {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1.5rem;
+    border-radius: 8px;
+}
 
 h2 {
-    font-size: 30px;
+    margin: 0;
+}
+input {
+    padding: 0.5rem;
+    margin-top:0.3em
 }
 
-h3 {
-    font-size: 24px;
-    font-weight: 700;
-}
 
-p {
-    font-size: 14px;
-}
-
-img {
-    width: 300px;
-    height: 200px;
-    border-radius: 10px 100%;
-}
-
-img:hover {
-    border-radius: 8px;
-    transform: scale(2)
-}
-
-a:hover {
-   color:   rgb(9, 60, 9);
-}
-.activity-card a:visited {
-   color: black;
-}
-
-a:link {
-    color:  white;
-}
-
-header {
-    display: flex;
-    justify-content: space-evenly;
+section {
     text-align: center;
-    position: relative;
-    padding: 10px 0 10px 0;
+    padding: 0.5rem;
     width: 100%;
+
 }
-
-#title {
-    position: absolute;
-    margin: 135px 0 0 0;
-}
-
-#sign-in-button {
-   position: absolute;
-   right: 15px;
-   top: 10px;
-   -webkit-text-stroke-width: 0px;
-   letter-spacing: 0.1em;
-   color: white;
-   border-radius: 8px;
-   background-color: rgba(255, 255, 255, 0.2);
-   padding: 1rem
-}
-
-#sign-in-button:hover{
-    transform: scale(1.25)
-}
-
-#activity-section {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    margin: 0.5rem
-}
-
-.activity-card {
-    padding: 5rem;
-    text-align: center;
-    justify-content: center;
-    background-repeat: no-repeat;
-    margin: 1rem;
-    margin-top: 3rem;
-    border-radius: 10px 85%;
-    background-size: cover;
-    width: 30%;
-}
-
-.activity-card:hover {
-    border-radius: 8px;
-    transition: border-radius 1s;
-}
-
-footer {
-    border-top: solid 5px rgb(9, 60, 9);
-    color: grey;
-    padding: 15px;
-    display: flex;
-    justify-content: space-around;
-    margin: 1rem
-}
-
-.gear-bullet {
-    display: list-item;
-    list-style-type: disc;
-    list-style-position: inside;
-}
-
-/* triangle css */
-.triangle {
-    position: relative;
-    height: 300px;
-    clip-path: polygon(55% 0, 5% 100%, 80% 100%);
-    width: 100%;
-    margin: 2rem;
-}
-
-.triangle div {
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    height: 100px;
-    background-color: rgba(31, 28, 28, 0.85)
-    /* background-image: url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/06653b48-43c3-403f-9d72-c1c5519db560/dd3pza8-930e0f24-e194-495d-90a6-bf6e66fdbe79.jpg/v1/fill/w_1194,h_669,q_70,strp/stone_wall_by_pajunen_dd3pza8-pre.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD0xMDc2IiwicGF0aCI6IlwvZlwvMDY2NTNiNDgtNDNjMy00MDNmLTlkNzItYzFjNTUxOWRiNTYwXC9kZDNwemE4LTkzMGUwZjI0LWUxOTQtNDk1ZC05MGE2LWJmNmU2NmZkYmU3OS5qcGciLCJ3aWR0aCI6Ijw9MTkyMCJ9XV0sImF1ZCI6WyJ1cm46c2VydmljZTppbWFnZS5vcGVyYXRpb25zIl19.TZhslY79iAeVhmkle4q6BTkwU2Vk3nGd3cKcgAtXOGc'); */
-}
-.top {
-    z-index: 1;
-}
-
-#home-page-header {
-    background-image: url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/06653b48-43c3-403f-9d72-c1c5519db560/dd3pza8-930e0f24-e194-495d-90a6-bf6e66fdbe79.jpg/v1/fill/w_1194,h_669,q_70,strp/stone_wall_by_pajunen_dd3pza8-pre.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD0xMDc2IiwicGF0aCI6IlwvZlwvMDY2NTNiNDgtNDNjMy00MDNmLTlkNzItYzFjNTUxOWRiNTYwXC9kZDNwemE4LTkzMGUwZjI0LWUxOTQtNDk1ZC05MGE2LWJmNmU2NmZkYmU3OS5qcGciLCJ3aWR0aCI6Ijw9MTkyMCJ9XV0sImF1ZCI6WyJ1cm46c2VydmljZTppbWFnZS5vcGVyYXRpb25zIl19.TZhslY79iAeVhmkle4q6BTkwU2Vk3nGd3cKcgAtXOGc');
-}
-
-
-
