--- a/home.css
+++ b/home.css
@@ -95,7 +95,7 @@ header {
     margin: 0.5rem
 }
 
-.activity-card {
+.display-card {
     padding: 5rem;
     text-align: center;
     justify-content: center;
@@ -105,6 +105,7 @@ header {
     border-radius: 10px 85%;
     background-size: cover;
     width: 30%;
+    background-color: grey;
 }
 
 .activity-card:hover {
