--- a/home.css
+++ b/home.css
@@ -88,6 +88,12 @@ header {
     transform: scale(1.25)
 }
 
+main > p {
+    font-size: 15px;
+    padding: 30px 0;
+    text-align: center;
+
+}
 #activity-section {
     display: flex;
     flex-flow: row wrap;
@@ -106,6 +112,7 @@ header {
     background-size: cover;
     width: 30%;
     background-color: grey;
+    height: 300px;
 }
 
 .display-card:hover {
