--- a/activity.css
+++ b/activity.css
@@ -89,7 +89,7 @@ h2, p {
 h3 {
     font-style: italic;
     text-decoration: underline;
-    padding: 0 0 10px 0;
+    text-align: center
 }
 
 .gear-bullet a{
