--- a/activity.css
+++ b/activity.css
@@ -1,23 +1,28 @@
 @import 'home.css';
 
-
-header {
-    margin: 0 5px 50px 0;
+nav {
+    justify-content: flex-end;
 }
 
 #home-button {
-    position: absolute;
     right: 15px;
     top: 10px;
     letter-spacing: 0.1em;
     color: black;
     border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.2);
-    padding: 1rem
+    background-color: rgba(255, 255, 255);
+    padding: 0.75rem;
+    margin: 0.1rem;
 }
 
 #home-button:hover {
-    transform: scale(1.25)
+    transform: scale(1.1)
+}
+
+
+input[type="submit"] {
+    background-color: steelblue;
+    color: white
 }
 
 #activity-header {
@@ -30,6 +35,7 @@ header {
     background-size: cover;
     background-position: center;
     padding: 5rem;
+    margin-bottom: 3rem;
     position: relative
 }
 
@@ -45,15 +51,7 @@ header {
     text-align: center;
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 1.3;
-    padding: 1rem
-}
-
-h2, p {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 30px 0 0 0;
-
+    padding: 1rem;
 }
 
 #name-the-list {
@@ -64,7 +62,7 @@ h2, p {
 #packing-list {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: flex-start;
     margin: 30px;
 }
@@ -73,7 +71,7 @@ h2, p {
     text-align: center;
     padding: 15px 40px;
     height: auto;
-    width: auto;
+    width: 300px;
     margin: 20px;
     border-radius: 8px;
     border-width: 5px;
@@ -82,14 +80,16 @@ h2, p {
     background-color: rgba(45, 35, 35, 0.2);
 }
 
+.category-card p {
+    font-size: 14px;
+}
+
 .category-card:hover {
-    transform: scale(1.25)
+    transform: scale(1.1)
 }
 
 h3 {
-    font-style: italic;
-    text-decoration: underline;
-    text-align: center
+    letter-spacing: 4px;
 }
 
 .gear-bullet a{
