--- a/home.css
+++ b/home.css
@@ -10,7 +10,6 @@ body {
     background-size: cover;
 }
 
-
 h1 {
     color: rgba(255, 255, 255, 0.3);;
     -webkit-text-stroke-width: 3px;
@@ -40,7 +39,6 @@ h3 {
 p {
     font-size: 18px;
 }
-
 
 a:hover {
    color:   rgb(9, 60, 9);
@@ -105,6 +103,7 @@ nav {
     margin-top: 3rem;
     border-radius: 10px 85%;
     width: 30%;
+    height: 250px;
 }
 
 .display-card:hover {
